@@ -8,7 +8,7 @@ blindtoggle('form_file');
 toggleClass('addfile','addfile-active','addfile');
 toggleClass('add_file_butn','butn_link_active','butn_link');
 toggleClass('sm_files','smooth','nosmooth');
-changeFileview($('fileviewtype').value);
+changeFileview($('fileviewtype').value,$('folderparent').value);
 $("statusrow").setAttribute("style","display:none;");
 $("fileInfo1").innerHTML = "";
 systemMsg("fileadded");
