@@ -26,13 +26,11 @@ $project = array('ID' => $id);
 $template->assign("project", $project);
 
 $pro = new project();
-if (!$id)
-{
+if (!$id) {
     $id = 0;
 }
 $template->assign("id", $id);
-if ($action == "timeline1next")
-{
+if ($action == "timeline1next") {
     $start = $start + 7;
     $end = $end + 7;
     $today = date("d");
@@ -41,8 +39,7 @@ if ($action == "timeline1next")
     $timeline1 = $pro->getTimeline($id, $start, $end);
 
     $timestring = array();
-    foreach($timestr as $times)
-    {
+    foreach($timestr as $times) {
         $times = $langfile[$times];
         array_push($timestring, $times);
     }
@@ -55,8 +52,7 @@ if ($action == "timeline1next")
     $template->assign("today", $today);
 
     $template->display("mileview1.tpl");
-} elseif ($action == "timeline1prev")
-{
+} elseif ($action == "timeline1prev") {
     $start = $start - 7;
     $end = $end - 7;
 
@@ -66,8 +62,7 @@ if ($action == "timeline1next")
     $timeline1 = $pro->getTimeline($id, $start, $end);
 
     $timestring = array();
-    foreach($timestr as $times)
-    {
+    foreach($timestr as $times) {
         $times = $langfile[$times];
         array_push($timestring, $times);
     }
@@ -80,8 +75,7 @@ if ($action == "timeline1next")
     $template->assign("today", $today);
 
     $template->display("mileview1.tpl");
-} elseif ($action == "timeline2next")
-{
+} elseif ($action == "timeline2next") {
     $start = $start + 7;
     $end = $end + 7;
     $today = date("d");
@@ -94,8 +88,7 @@ if ($action == "timeline1next")
     $end = $end + 7;
     $timeline2 = $pro->getTimeline($id, $start, $end);
     $timestring = array();
-    foreach($timestr as $times)
-    {
+    foreach($timestr as $times) {
         $times = $langfile[$times];
         array_push($timestring, $times);
     }
@@ -109,8 +102,7 @@ if ($action == "timeline1next")
     $template->assign("today", $today);
 
     $template->display("mileview2.tpl");
-} elseif ($action == "timeline2prev")
-{
+} elseif ($action == "timeline2prev") {
     $start = $start - 7;
     $end = $end - 7;
     $today = date("d");
@@ -124,8 +116,7 @@ if ($action == "timeline1next")
     $timeline1 = $pro->getTimeline($id, $start, $end);
 
     $timestring = array();
-    foreach($timestr as $times)
-    {
+    foreach($timestr as $times) {
         $times = $langfile[$times];
         array_push($timestring, $times);
     }
@@ -139,21 +130,18 @@ if ($action == "timeline1next")
     $template->assign("today", $today);
 
     $template->display("mileview2.tpl");
-} elseif ($action == "makeinputs")
-{
+} elseif ($action == "makeinputs") {
     $num = getArrayVal($_GET, "num");
     $file = $langfile["file"] . ":";
     $title = $langfile["title"] . ":";
     $tags = $langfile["tags"] . ":";
 
-    for($i = 1;$i <= $num;$i++)
-    {
+    for($i = 1;$i <= $num;$i++) {
         echo " <div class=\"row\"><label for = \"title$i\">$title </label><input type = \"text\" name = \"userfile$i-title\" id=\"title$i\" /></div>
         <div class=\"row\"><label for = \"tags$i\">$tags </label><input type = \"text\" name = \"userfile$i-tags\" id=\"tags$i\" /></div>
 			<div class=\"row\"><label for = \"userfile$i\">$file </label><input type=\"file\" id = \"userfile$i\" name=\"userfile$i\" /><div style=\"clear:left\"></div>";
     }
-} elseif ($action == "addfx-all")
-{
+} elseif ($action == "addfx-all") {
     $templ = $url . "managesearch.php?action=search&amp;query={searchTerms}";
     $templ2 = $url . "managesearch.php?action=searchjson&amp;query={searchTerms}";
     $fav = $url . "templates/standard/images/favicon.ico";
@@ -172,8 +160,7 @@ if ($action == "timeline1next")
 
 <AdultContent>false</AdultContent>
 </OpenSearchDescription>";
-} elseif ($action == "addfx-project")
-{
+} elseif ($action == "addfx-project") {
     $templ = $url . "managesearch.php?action=projectsearch&amp;project=$project&amp;query={searchTerms}";
     $templ2 = $url . "managesearch.php?action=searchjson-project&amp;project=$project&amp;query={searchTerms}";
     $fav = $url . "templates/standard/images/favicon.ico";
@@ -195,10 +182,8 @@ if ($action == "timeline1next")
 
 <AdultContent>false</AdultContent>
 </OpenSearchDescription>";
-} elseif ($action == "jsonfiles")
-{
-    if (!chkproject($userid, $id))
-    {
+} elseif ($action == "jsonfiles") {
+    if (!chkproject($userid, $id)) {
         $errtxt = $langfile["notyourproject"];
         $noperm = $langfile["accessdenied"];
         $template->assign("errortext", "$errtxt<br>$noperm");
@@ -208,29 +193,21 @@ if ($action == "timeline1next")
 
     $myfile = new datei();
     $ordner = $myfile->getProjectFiles($id);
-    if (!empty($ordner))
-    {
+    if (!empty($ordner)) {
         $json = "var tinyMCEImageList = new Array(\n";
-        foreach($ordner as $file)
-        {
-            if ($file["imgfile"] == 1)
-            {
+        foreach($ordner as $file) {
+            if ($file["imgfile"] == 1) {
                 $json .= "[\"$file[datei]\", \"$file[datei]\"],\n";
             }
         }
         $json = substr($json, 0, strlen($json)-2);
         $json .= ");";
-    }
-    else
-    {
+    } else {
         $json = "";
     }
     echo $json;
-} elseif ($action == "fileview")
-{
-
-    if (!chkproject($userid, $id))
-    {
+} elseif ($action == "fileview") {
+    if (!chkproject($userid, $id)) {
         $errtxt = $langfile["notyourproject"];
         $noperm = $langfile["accessdenied"];
         $template->assign("errortext", "$errtxt<br>$noperm");
@@ -245,95 +222,35 @@ if ($action == "timeline1next")
     $myfile = new datei();
     $ordner = $myfile->getProjectFiles($id, 1000000, $folder);
     $finfiles = array();
-    if (!empty($ordner))
-    {
-        foreach($ordner as $file)
-        {
-
-            if ($file["visible"])
-            {
-                $filevis = unserialize($file["visible"]);
-
-                if (is_array($filevis))
-                {
-                    //array_push($filevis, 18);
-                    if (in_array($userpermissions["ID"], $filevis))
-                    {
-                        array_push($finfiles, $file);
-                    }
-                }
-                else
-                {
-                    array_push($finfiles, $file);
-                }
-            }
-            else
-            {
-                array_push($finfiles, $file);
-            }
+    if (!empty($ordner)) {
+        foreach($ordner as $file) {
+            array_push($finfiles, $file);
         }
     }
     $filenum = count($finfiles);
-    if (empty($finfiles))
-    {
+    if (empty($finfiles)) {
         $filenum = 0;
     }
 
-    $filenum = count($finfiles);
-    if (empty($finfiles))
-    {
-        $filenum = 0;
-    }
-
-    if ($folder == 0)
-    {
+    if ($folder == 0) {
         $folders = $myfile->getProjectFolders($id);
-		$foldername = "";
-		$thefolder = array("parent"=>0);
-    }
-    else
-    {
+        $foldername = "";
+        $thefolder = array("parent" => 0);
+    } else {
         $folders = $myfile->getProjectFolders($id, $folder);
         $thefolder = $myfile->getFolder($folder);
         $foldername = $thefolder["abspath"];
     }
 
-    $finfolders = array();
-    if (!empty($folders))
-    {
-        foreach($folders as $folder)
-        {
-            if ($folder["visible"])
-            {
-                $foldvis = unserialize($folder["visible"]);
+    $finfolders = $folders;
 
-                if (is_array($foldvis))
-                {
-                    if (in_array($userpermissions["ID"], $foldvis))
-                    {
-                        array_push($finfolders, $folder);
-                    }
-                }
-                else
-                {
-                    array_push($finfolders, $folder);
-                }
-            }
-            else
-            {
-                array_push($finfolders, $folder);
-            }
-        }
-
-        $template->assign("folders", $finfolders);
-    }
     $template->assign("filenum", $filenum);
     $template->assign("foldername", $foldername);
-    if(!$thefolder["parent"])
-    {
-		$thefolder["parent"] = 0;
-	}
+    if (!$thefolder["parent"]) {
+        $thefolder["parent"] = 0;
+    }
 
+    $template->assign("folders", $finfolders);
     $template->assign("folderid", $thefolder["parent"]);
     $template->assign("langfile", $langfile);
     $template->assign("theAction", "fileview");
@@ -341,11 +258,8 @@ if ($action == "timeline1next")
     $template->assign("files", $finfiles);
     $template->assign("postmax", $POST_MAX_SIZE);
     $template->display("fileview.tpl");
-}
-elseif ($action == "fileview_list")
-{
-    if (!chkproject($userid, $id))
-    {
+} elseif ($action == "fileview_list") {
+    if (!chkproject($userid, $id)) {
         $errtxt = $langfile["notyourproject"];
         $noperm = $langfile["accessdenied"];
         $template->assign("errortext", "$errtxt<br>$noperm");
@@ -360,86 +274,28 @@ elseif ($action == "fileview_list")
     $myfile = new datei();
     $ordner = $myfile->getProjectFiles($id, 1000000, $folder);
     $finfiles = array();
-    if (!empty($ordner))
-    {
-        foreach($ordner as $file)
-        {
-
-            if ($file["visible"])
-            {
-                $filevis = unserialize($file["visible"]);
-
-                if (is_array($filevis))
-                {
-                    //array_push($filevis, 18);
-                    if (in_array($userpermissions["ID"], $filevis))
-                    {
-                        array_push($finfiles, $file);
-                    }
-                }
-                else
-                {
-                    array_push($finfiles, $file);
-                }
-            }
-            else
-            {
-                array_push($finfiles, $file);
-            }
+    if (!empty($ordner)) {
+        foreach($ordner as $file) {
+            array_push($finfiles, $file);
         }
     }
     $filenum = count($finfiles);
-    if (empty($finfiles))
-    {
+    if (empty($finfiles)) {
         $filenum = 0;
     }
 
-    $filenum = count($finfiles);
-    if (empty($finfiles))
-    {
-        $filenum = 0;
-    }
-
-    if ($folder == 0)
-    {
+    if ($folder == 0) {
         $folders = $myfile->getProjectFolders($id);
-    }
-    else
-    {
+    } else {
         $folders = $myfile->getProjectFolders($id, $folder);
         $thefolder = $myfile->getFolder($folder);
         $foldername = $thefolder["abspath"];
     }
 
-    $finfolders = array();
-    if (!empty($folders))
-    {
-        foreach($folders as $folder)
-        {
-            if ($folder["visible"])
-            {
-                $foldvis = unserialize($folder["visible"]);
+    $finfolders = $folders;
 
-                if (is_array($foldvis))
-                {
-                    if (in_array($userpermissions["ID"], $foldvis))
-                    {
-                        array_push($finfolders, $folder);
-                    }
-                }
-                else
-                {
-                    array_push($finfolders, $folder);
-                }
-            }
-            else
-            {
-                array_push($finfolders, $folder);
-            }
-        }
+    $template->assign("folders", $finfolders);
 
-        $template->assign("folders", $finfolders);
-    }
     $template->assign("filenum", $filenum);
     $template->assign("foldername", $foldername);
     $template->assign("folderid", $thefolder["parent"]);
@@ -449,12 +305,8 @@ elseif ($action == "fileview_list")
     $template->assign("files", $finfiles);
     $template->assign("postmax", $POST_MAX_SIZE);
     $template->display("fileview_list.tpl");
-}
-
-elseif ($action == "folderview")
-{
-    if (!chkproject($userid, $id))
-    {
+} elseif ($action == "folderview") {
+    if (!chkproject($userid, $id)) {
         $errtxt = $langfile["notyourproject"];
         $noperm = $langfile["accessdenied"];
         $template->assign("errortext", "$errtxt<br>$noperm");
@@ -469,41 +321,32 @@ elseif ($action == "folderview")
     $template->assign("langfile", $langfile);
     $template->assign("ordner", $ordner);
     $template->display("folderview.tpl");
-} elseif ($action == "newcal")
-{
+} elseif ($action == "newcal") {
     $thisd = date("j");
     $thism = date("n");
     $thisy = date("Y");
 
     $m = getArrayVal($_GET, "m");
     $y = getArrayVal($_GET, "y");
-    if (!$m)
-    {
+    if (!$m) {
         $m = $thism;
     }
-    if (!$y)
-    {
+    if (!$y) {
         $y = $thisy;
     }
 
     $nm = $m + 1;
     $pm = $m -1;
-    if ($nm > 12)
-    {
+    if ($nm > 12) {
         $nm = 1;
         $ny = $y + 1;
-    }
-    else
-    {
+    } else {
         $ny = $y;
     }
-    if ($pm < 1)
-    {
+    if ($pm < 1) {
         $pm = 12;
         $py = $y-1;
-    }
-    else
-    {
+    } else {
         $py = $y;
     }
 
