@@ -25,11 +25,15 @@ those tabs were redundant for quite some time now. all their information is, in 
 + Changed the truncation of project titles and task titles on the desktop slightly to prevent http://collabtive.o-dyn.de/forum/viewtopic.php?f=11&t=8750#p17251
 + Made timetracker show closed tasks in addition to open tasks when editing a task ( http://collabtive.o-dyn.de/forum/viewtopic.php?f=11&t=8749 )
 + Fixed adding folders
-+ When clicking on a folder set the folder in the select menu for add file and add folder to the clicked folder. 
++ When clicking on a folder set the folder in the select menu for add file and add folder to the clicked folder.
 this way you can upload into a folder you just clicked straight away.
 + Fixed adding folders
 + Removed the "visibility" functionality for folders...finally
 + Removed IE7 compatibility
++ Files: Made listview / gridview switch respect the currently selected folder when switching views
++ Made the uploader respect the currently selected folder when refreshing. Now after an upload is complete the view will refresh
+the subfolder to which a file has been u ploaded and not always the main folder.
+
 
 Collabtive 0.7.6
 + Added Estonian translation
